# npynuma

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
npynuma/: __init__.py  numa.c  numa.pyi  numa_policy.py
