[project]
name = "npynuma"
description = "Allocate numpy arrays on NUMA nodes"
version = "0.1.0"
dependencies = [
    "numpy>=1.22",
]

authors = [
  {name = "xsgeng", email = "xsgeng@siom.ac.cn"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [""]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/xsgeng/npynuma"

[build-system]
requires = [
    "setuptools",
    "numpy",
]
build-backend = "setuptools.build_meta"